tests/sources/invalid/control_flow/for_c_style_missing_semicolon.fire
// C-style for loop missing the semicolon between the condition and the
// increment clause.
int32 main() {
    for (int32 i = 0; i < 10 i++) {  //~ ERROR FS-PARSE-0010 @30
//~^ ERROR FS-PARSE-0003 @30
    }
    return 0;
}
